# particle_system

./: .gitignore  .gitmodules  CMakeLists.txt  GLFW.cpp  GLFW.h  Readme.md  main.cpp  particle_system  sine_wave.cl  sine_wave.ocl
assets/kernels/: particle.cl  test.cl
assets/shaders/: particle_fs.glsl  particle_vs.glsl  text_fs.glsl  text_vs.glsl  triangle_vs.glsl
glfw/: EventQueue.cpp  EventQueue.h
opengl/: Buffer.h  GLFactory.cpp  GLFactory.h  Program.cpp  Program.h
proxies/: FreeType.cpp  FreeType.h  GLFW.cpp  GLFW.h  OpenCL.cpp  OpenCL.h  ProxyInterface.h
src/: Core.cpp  Core.h
src/opencl/: SharedContext.cpp  SharedContext.h  cl.h  utils.cpp  utils.h
src/opengl/: GLFW.cpp  GLFW.h
utils/: FPSCamera.cpp  FPSCamera.h  FileLogger.cpp  FileLogger.h  FrameCounter.cpp  FrameCounter.h
